@@ -19,6 +19,9 @@ my $app = route {
     http 'CUSTOM', -> {
         content 'text/plain', 'CUSTOM';
     }
+    http <GET CUSTOM>, -> "list" {
+        content 'text/plain', 'GET or CUSTOM';
+    }
 }
 
 {
@@ -41,6 +44,16 @@ my $app = route {
     given await $c.request('CUSTOM', "$base") -> $resp {
         ok $resp ~~ Cro::HTTP::Response, 'CUSTOM using http method works';
         is await($resp.body-text), 'CUSTOM', 'Body text is correct';
+    }
+
+    given await $c.get("$base/list") -> $resp {
+        ok $resp ~~ Cro::HTTP::Response, 'GET using http method works';
+        is await($resp.body-text), 'GET or CUSTOM', 'Body text is correct';
+    }
+
+    given await $c.request('CUSTOM', "$base/list") -> $resp {
+        ok $resp ~~ Cro::HTTP::Response, 'CUSTOM using http method works';
+        is await($resp.body-text), 'GET or CUSTOM', 'Body text is correct';
     }
 }
 
@@ -66,6 +79,16 @@ if supports-alpn() {
     given await $c.request('CUSTOM', "$base", :%ca) -> $resp {
         ok $resp ~~ Cro::HTTP::Response, 'CUSTOM using http method works';
         is await($resp.body-text), 'CUSTOM', 'Body text is correct';
+    }
+
+    given await $c.get("$base/list", :%ca) -> $resp {
+        ok $resp ~~ Cro::HTTP::Response, 'GET using http method works';
+        is await($resp.body-text), 'GET or CUSTOM', 'Body text is correct';
+    }
+
+    given await $c.request('CUSTOM', "$base/list", :%ca) -> $resp {
+        ok $resp ~~ Cro::HTTP::Response, 'CUSTOM using http method works';
+        is await($resp.body-text), 'GET or CUSTOM', 'Body text is correct';
     }
 }
 
